--- a/omdbMovieApp/index.html
+++ b/omdbMovieApp/index.html
@@ -12,11 +12,7 @@
     </div>
     <div id="cont">
         <div id="search-contant">
-            <form onsubmit="event.preventDefault(), getData()">
-                <label for="Movie">Movie:</label>
-                <input type="text" placeholder="Search Movie ..." id="movieSearch">
-                <button type="submit">Submit</button>
-            </form>    
+            <button onclick="getData()">Get Info</button>
         </div>
     </div>
     <div id="display"></div>
